Pulled in demo code, get segfault on mpu lib init

--- a/src/daemon/Makefile
+++ b/src/daemon/Makefile
@@ -1,13 +1,21 @@
-# TODO: Add in debug and release targets, and put in optimisation
-# for release build, and symbols for debug build.
-# this might point the way:
-# https://stackoverflow.com/questions/1079832/how-can-i-configure-my-makefile-for-debug-and-release-builds
-# vscode task was got from here: https://gist.github.com/Hirosam1/a49fd002a365c976d3201a9c9d5f6918
-# need to tweak to get the two building the right target.
-
-# example from https://www.cs.colby.edu/maxwell/courses/tutorials/maketutor/
-# need to use g++ not gc as g++ knows where C++ stdlib files are
-
+#############################################################
+#
+# Compiles named cpp files. Handles source files in nested
+# directories using VPATH trick.
+#
+# (update _OBJ to control cpps built, VPATH to add additional
+# source directories, and CXXFLAGS to add additional include 
+# directories). 
+#
+# Puts obj files in obj/.
+# "debug" target outputs to bin/debug/, default ("release") target
+# outputs to bin/release/.
+#
+# Munged together from a lot of places, it's quite clunky
+# but works.
+# Phil McCarthy Jan 2021
+#
+#############################################################
 .DEFAULT_GOAL := release
 
 CXX := g++
@@ -17,15 +25,13 @@ VPATH=lib/I2Cdev:lib/MPU6050
 
 ODIR=obj
 LDIR=
-LIBS=-lbcm2835
+LIBS=-lbcm2835 -lm
 OUTFILE = sbrcontrollerd
-
-DEPS = ISpacialSensor.h lib/I2Cdev/I2Cdev.h lib/MPU6050/MPU6050.h
 
 _OBJ = main.o I2Cdev.o MPU6050.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
-$(ODIR)/%.o: %.cpp $(DEPS)
+$(ODIR)/%.o: %.cpp
 	@mkdir -p $(@D)
 	$(CXX) -c -o $@ $< $(CXXFLAGS)
 
