--- a/src/daemon/sbrconfig.json
+++ b/src/daemon/sbrconfig.json
@@ -2,7 +2,9 @@
     "AHRS": {
         "FusionAlgorithm": "Madgwick",
         "SensorSampleRateHz": 20,
-        "GyroSensor": "MPU6050_gyro",
-        "AccelSensor": "MPU6050_accel"
+        "Sensors": [
+            "MPU6050_gyro",
+            "MPU6050_accel"
+        ]
     }
 }
