Still trying to gt daemon building

--- a/src/daemon/src/ahrs/CMakeLists.txt
+++ b/src/daemon/src/ahrs/CMakeLists.txt
@@ -7,3 +7,4 @@ set(ahrs_source_files
 add_subdirectory(algorithms)
 add_subdirectory(sensors)
 add_library(ahrs ${ahrs_source_files})
+target_include_directories(ahrs PRIVATE ../)
