--- a/src/daemon/src/CMakeLists.txt
+++ b/src/daemon/src/CMakeLists.txt
@@ -1,25 +1,4 @@
-﻿add_subdirectory(ahrs)
-#add_subdirectory(coms)
-#add_subdirectory(utility)
-#add_library(sbrlib) for any sources directly in this src dir
-
-set(header_files
-    sbrcontroller.h
-    ahrs/AHRS.h
-    ahrs/AHRSController.h
-)
-
-add_executable(sbrcontrollerd main.cpp ${header_files})
-set(sbr_includes
-ahrs
-ahrs/algorithms
-ahrs/sensors
-utility
-coms
-)
-target_include_directories(sbrcontrollerd PRIVATE ${sbr_includes})
-
-include(FetchContent)
+﻿include(FetchContent)
 
 FetchContent_Declare(json
   #GIT_REPOSITORY https://github.com/nlohmann/json.git
@@ -32,4 +11,24 @@ if(NOT json_POPULATED)
   add_subdirectory(${json_SOURCE_DIR} ${json_BINARY_DIR} EXCLUDE_FROM_ALL)
 endif()
 
-target_link_libraries(sbrcontrollerd PRIVATE nlohmann_json::nlohmann_json ahrs)
+add_subdirectory(ahrs)
+add_subdirectory(coms)
+add_subdirectory(utility)
+
+set(header_files
+    sbrcontroller.h
+    ahrs/AHRS.h
+    ahrs/AHRSController.h
+)
+
+add_executable(sbrcontrollerd main.cpp ${header_files})
+set(sbr_includes
+./
+ahrs
+ahrs/algorithms
+ahrs/sensors
+utility
+coms
+)
+target_include_directories(sbrcontrollerd PRIVATE ${sbr_includes})
+target_link_libraries(sbrcontrollerd PRIVATE nlohmann_json::nlohmann_json ahrs coms utility)
