--- a/src/daemon/src/ahrs/algorithms/CMakeLists.txt
+++ b/src/daemon/src/ahrs/algorithms/CMakeLists.txt
@@ -3,4 +3,10 @@ set(ahrs_algorithms_source_files
   Madgwick.h
 )
 add_library(ahrs_algorithms ${ahrs_algorithms_source_files})
-target_include_directories(ahrs_algorithms PRIVATE ../ ../../)
+
+set(ahrs_algorithms_includes
+  ./
+  ../
+  ../../
+)
+target_include_directories(ahrs_algorithms PRIVATE ${ahrs_algorithms_includes})
