Got the new proj structure building with cmake

--- a/src/daemon/src/CMakeLists.txt
+++ b/src/daemon/src/CMakeLists.txt
@@ -9,6 +9,8 @@ set(header_files
     ahrs/AHRSController.h
 )
 
+link_directories(${CODE_ROOT}/FancyLogger/bin)
+
 add_executable(sbrcontrollerd main.cpp ${header_files})
 
 set(sbr_includes
@@ -20,5 +22,7 @@ utility
 coms
 )
 
+find_package(Threads REQUIRED)
+
 target_include_directories(sbrcontrollerd PRIVATE ${sbr_includes})
-target_link_libraries(sbrcontrollerd PRIVATE ahrs coms utility)
+target_link_libraries(sbrcontrollerd PRIVATE ahrs coms utility Threads::Threads)
