--- a/src/daemon/src/ahrs/CMakeLists.txt
+++ b/src/daemon/src/ahrs/CMakeLists.txt
@@ -7,5 +7,11 @@ set(ahrs_source_files
 add_subdirectory(algorithms)
 add_subdirectory(sensors)
 add_library(ahrs ${ahrs_source_files})
-target_link_libraries(ahrs PRIVATE algorithms sensors)
-target_include_directories(ahrs PRIVATE ../)
+target_link_libraries(ahrs PRIVATE ahrs_algorithms ahrs_sensors)
+
+set(ahrs_includes
+algorithms
+../
+)
+
+target_include_directories(ahrs PRIVATE ${ahrs_includes})
