--- a/src/daemon/src/utility/CMakeLists.txt
+++ b/src/daemon/src/utility/CMakeLists.txt
@@ -1,9 +1,10 @@
 include(FetchContent)
 
+#GIT_REPOSITORY https://github.com/nlohmann/json.git
+
 FetchContent_Declare(json
-  #GIT_REPOSITORY https://github.com/nlohmann/json.git
   GIT_REPOSITORY https://github.com/ArthurSonzogni/nlohmann_json_cmake_fetchcontent
-  GIT_TAG v3.7.3)
+  GIT_TAG v3.9.1)
 
 FetchContent_GetProperties(json)
 if(NOT json_POPULATED)
@@ -33,5 +34,5 @@ set(utility_includes
 ../coms
 )
 
-target_link_libraries(utility PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(utility PRIVATE nlohmann_json::nlohmann_json coms ahrs)
 target_include_directories(utility PRIVATE ${utility_includes})
