--- a/src/daemon/.vscode/launch.json
+++ b/src/daemon/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/sbrcore",
+            "program": "${workspaceFolder}/build/src/sbrcontrollerd",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
