Refactored JSON config and added logger factory

--- a/src/daemon/.vscode/settings.json
+++ b/src/daemon/.vscode/settings.json
@@ -60,7 +60,10 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bitset": "cpp",
+        "regex": "cpp",
+        "complex": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
