--- a/src/daemon/src/coms/CMakeLists.txt
+++ b/src/daemon/src/coms/CMakeLists.txt
@@ -12,7 +12,9 @@ set(coms_includes
   ../
 )
 
-find_library(wiringPi_LIB wiringPi)
+#find_library(wiringPi_LIB wiringPi)
+#${wiringPi_LIB}
+#find_library(i2c_LIB i2c)
 
-target_link_libraries(coms PRIVATE ${wiringPi_LIB})
+target_link_libraries(coms PRIVATE i2c)
 target_include_directories(coms PRIVATE ${coms_includes})
