--- a/src/daemon/sbrconfig.json
+++ b/src/daemon/sbrconfig.json
@@ -8,7 +8,7 @@
         ]
     },
     "logging": {
-        "level": "error",
+        "level": "info",
         "pattern": "%+",
         "sinks": [
             {
