Testing sending commands to odrive, cs mech not working

--- a/src/daemon/sbrconfig.json
+++ b/src/daemon/sbrconfig.json
@@ -16,11 +16,13 @@
         "motors": [
             {
                 "name": "right",
-                "id": 0
+                "id": 0,
+                "reversed": false
             },
             {
                 "name": "left",
-                "id": 1
+                "id": 1,
+                "reversed": true
             }
         ]
     },
