--- a/src/daemon/src/utility/CMakeLists.txt
+++ b/src/daemon/src/utility/CMakeLists.txt
@@ -57,6 +57,9 @@ set(utility_files
   ILoggerFactory.h
   LoggerFactory.h
   LoggerFactory.cpp
+  IChecksumCalculator.h
+  GCodeChecksumCalc.h
+  GCodeChecksumCalc.cpp
 )
 
 add_library(utility ${utility_files})
