--- a/src/daemon/.vscode/launch.json
+++ b/src/daemon/.vscode/launch.json
@@ -6,11 +6,30 @@
     "configurations": [
         
         {
-            "name": "(gdb) Launch",
+            "name": "(gdb) Debug sbrcontroller",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/src/sbrcontrollerd",
             "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) Debug sbrtests",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/test/sbrtests",
+            "args": ["--gtest_filter=GCodeChecksumCalcTests.*"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
