--- a/src/daemon/test/CMakeLists.txt
+++ b/src/daemon/test/CMakeLists.txt
@@ -35,6 +35,7 @@ MemoryConfigProvider.h
 AHRSPerformanceTests.cpp
 StringReaderWriterTests.cpp
 GCodeChecksumCalcTests.cpp
+MotorComsIntegrationTests.cpp
 )
 
 # Now simply link against gtest or gtest_main as needed. Eg
