--- a/src/daemon/src/ahrs/sensors/CMakeLists.txt
+++ b/src/daemon/src/ahrs/sensors/CMakeLists.txt
@@ -3,7 +3,9 @@ set(ahrs_sensors_source_files
   MPU6050Accel.h
   MPU6050Gyro.cpp
   MPU6050Gyro.h
+  FXAS21002Gyro.cpp
+  FXAS21002Gyro.h
 )
 add_library(ahrs_sensors ${ahrs_sensors_source_files})
 target_include_directories(ahrs_sensors PRIVATE ../ ../../ ../../coms)
-target_link_libraries(ahrs_sensors PRIVATE spdlog)
+target_link_libraries(ahrs_sensors PRIVATE fmt::fmt spdlog)
