Added support for FXOS8700 Accel and Mag. Results are iffy, need investigation

--- a/src/daemon/.vscode/launch.json
+++ b/src/daemon/.vscode/launch.json
@@ -29,7 +29,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/test/sbrtests",
-            "args": ["--gtest_filter=GCodeChecksumCalcTests.*"],
+            "args": ["--gtest_filter=AHRSPerformanceTests.RestingSensorVarianceTest_fxas2100_fxos8700raw_madgwick"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
