--- a/src/daemon/src/ahrs/sensors/CMakeLists.txt
+++ b/src/daemon/src/ahrs/sensors/CMakeLists.txt
@@ -5,6 +5,10 @@ set(ahrs_sensors_source_files
   MPU6050Gyro.h
   FXAS21002Gyro.cpp
   FXAS21002Gyro.h
+  FXOS8700Accel.cpp
+  FXOS8700Accel.h
+  FXOS8700Mag.cpp
+  FXOS8700Mag.h
 )
 add_library(ahrs_sensors ${ahrs_sensors_source_files})
 target_include_directories(ahrs_sensors PRIVATE ../ ../../ ../../coms)
