Added calibration tool for gyro and magnetometer

--- a/src/daemon/.vscode/settings.json
+++ b/src/daemon/.vscode/settings.json
@@ -63,7 +63,8 @@
         "variant": "cpp",
         "bitset": "cpp",
         "regex": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "typeindex": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
