--- a/src/daemon/sbrconfig.json
+++ b/src/daemon/sbrconfig.json
@@ -1,25 +1,30 @@
 {
     "ahrs": {
         "fusionAlgorithm": "Madgwick",
-        "sensorSampleRateHz": 20,
+        "sensorSampleRateHz": 100,
         "sensors": [
             {
                 "id": "FXAS2100_gyro",
                 "calibration": {
-                    "x": -0.011930962,
-                    "y": -0.0053177997,
-                    "z": -0.0008181231
+                    "x": -0.010840131,
+                    "y": -0.0076358155,
+                    "z": -0.00068176934
                 }
             },
             {
-                "id": "FXOS8700_accel"
+                "id": "FXOS8700_accel",
+                "calibration": {
+                    "x": 0.027694,
+                    "y": -0.021594,
+                    "z": 0.02459997
+                }
             },
             {
                 "id": "FXOS8700_mag",
                 "calibration": {
-                    "x": -29.1,
-                    "y": -38.9,
-                    "z": -36.15
+                    "x": -26.95,
+                    "y": -33.3,
+                    "z": -38.2
                 }
             }
         ]
