--- a/src/daemon/src/CMakeLists.txt
+++ b/src/daemon/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 ﻿add_subdirectory(ahrs)
 add_subdirectory(coms)
 add_subdirectory(utility)
+add_subdirectory(motor)
 
 set(header_files
     sbrcontroller.h
@@ -18,12 +19,13 @@ ahrs/algorithms
 ahrs/sensors
 utility
 coms
+motor
 )
 
 find_package(Threads REQUIRED)
 
 target_include_directories(sbrcontrollerd PRIVATE ${sbr_includes})
-target_link_libraries(sbrcontrollerd PRIVATE ahrs coms utility Threads::Threads spdlog)
+target_link_libraries(sbrcontrollerd PRIVATE ahrs coms utility motor Threads::Threads spdlog)
 
 # copy default config file
 add_custom_command(
