All code but test building, need to test new ahrs pub sub

--- a/src/daemon/src/motor/CMakeLists.txt
+++ b/src/daemon/src/motor/CMakeLists.txt
@@ -2,14 +2,17 @@ set(motor_source_files
   IMotorController.h
   ODriveController.h
   ODriveController.cpp
-  
+  ISBRController.h
+  SBRController.h
+  SBRController.cpp
 )
 
 add_library(motor ${motor_source_files})
-target_link_libraries(motor PRIVATE fmt::fmt spdlog)
+target_link_libraries(motor PRIVATE ahrs fmt::fmt spdlog)
 
 set(motor_includes
 ../
+../ahrs
 ../coms
 ../utility
 )
