Tidied code up, got tests building

--- a/src/daemon/src/ahrs/CMakeLists.txt
+++ b/src/daemon/src/ahrs/CMakeLists.txt
@@ -7,11 +7,12 @@ set(ahrs_source_files
 add_subdirectory(algorithms)
 add_subdirectory(sensors)
 add_library(ahrs ${ahrs_source_files})
-target_link_libraries(ahrs PRIVATE ahrs_algorithms ahrs_sensors spdlog)
+target_link_libraries(ahrs PRIVATE ahrs_algorithms ahrs_sensors utility spdlog)
 
 set(ahrs_includes
 algorithms
 ../
+../utility
 )
 
 target_include_directories(ahrs PRIVATE ${ahrs_includes})
